<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="main_header">Playlist maker</string>
    <string name="search_title">Поиск</string>
    <string name="library_title">Медиатека</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_dark_theme">Темная тема</string>
    <string name="settings_share_app">Поделиться приложением</string>
    <string name="settings_support_chat">Написать в поддержку</string>
    <string name="settings_user_agreement">Пользовательское соглашение</string>
    <string name="share_app_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="mail_to_devs_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_to_devs_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="mail_to_devs_recipient">valhero@yandex.ru</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="track_not_found">Ничего не нашлось</string>
    <string name="server_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="history_title">Вы искали</string>
    <string name="track_genre">Жанр</string>
    <string name="track_duration">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_release_year">Год</string>
    <string name="track_country">Страна</string>
    <string name="favourite_tracks_not_found">Ваша медиатека пуста</string>
    <string name="playlists_not_found">Вы не создали\nни одного плейлиста</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="track_prepare_fail_error">Не удается загрузить трек</string>
    <string name="cant_be_played_error">Этот трек недоступен для прослушивания</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="create">Создать</string>
    <string name="playlist_name_input">Название*</string>
    <string name="playlist_description_input">Описание</string>
    <string name="unsaved_exit_title">Завершить создание плейлиста?</string>
    <string name="decline">Отмена</string>
    <string name="unsaved_data_loss_message">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created_message">Плейлист %1$s создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_added_message">Добавлено в плейлист %1$s</string>
    <string name="already_in_playlist_message">Трек уже добавлен в плейлист %1$s</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track_title">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="playlist_is_empty_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_delete_confirm_title">Хотите удалить плейлист «%1$s»?</string>
    <string name="save_playlist">Сохранить</string>
    <string name="empty_playlist">В этом плейлисте нет треков</string>

    <plurals name="tracks_count">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="playlist_duration">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>