<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_background"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/main_layout_horizontal_padding"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/header_top_padding"
        android:paddingBottom="@dimen/header_bottom_padding"
        android:text="@string/main_header"
        android:textColor="@color/white"
        android:textSize="@dimen/screen_header" />

    <Button
        android:id="@+id/song_search_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/space_between_main_buttons"
        android:layout_weight="3"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:letterSpacing="0"
        android:text="@string/search_title"
        android:textAllCaps="false"
        android:textColor="@color/YP_black"
        android:textSize="@dimen/screen_header"
        app:cornerRadius="@dimen/main_button_corner_radius"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_button_icon_padding"
        app:iconTint="@color/YP_black" />

    <Button
        android:id="@+id/library_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/space_between_main_buttons"
        android:layout_weight="3"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:letterSpacing="0"
        android:text="@string/library_title"
        android:textAllCaps="false"
        android:textColor="@color/YP_black"
        android:textSize="@dimen/screen_header"
        app:cornerRadius="@dimen/main_button_corner_radius"
        app:icon="@drawable/library"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_button_icon_padding"
        app:iconTint="@color/YP_black" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:layout_weight="3"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:letterSpacing="0"
        android:text="@string/settings_title"
        android:textAllCaps="false"
        android:textColor="@color/YP_black"
        android:textSize="@dimen/screen_header"
        app:cornerRadius="@dimen/main_button_corner_radius"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_button_icon_padding"
        app:iconTint="@color/YP_black" />


</LinearLayout>
